--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -136,6 +136,12 @@
     <script src="scripts/app/admin/tracker/tracker.js"></script>
     <script src="scripts/app/admin/tracker/tracker.controller.js"></script>
     <script src="scripts/components/tracker/tracker.service.js"></script>
+    <script src="scripts/app/entities/member/member.js"></script>
+    <script src="scripts/app/entities/member/member.controller.js"></script>
+    <script src="scripts/app/entities/member/member-dialog.controller.js"></script>
+    <script src="scripts/app/entities/member/member-detail.controller.js"></script>
+    <script src="scripts/components/entities/member/member.service.js"></script>
+    <script src="scripts/components/entities/member/member.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
